arreglado prboblemas del navbar, pendiente aplicacion de tema a las tarjetas

--- a/src/App.css
+++ b/src/App.css
@@ -45,3 +45,22 @@ body {
   border-radius: 12px;
   padding: 2rem;
 }
+
+
+body.light {
+  background-color: #f8f9fa;
+  color: #212529;
+}
+
+body.dark {
+  background-color: #212529;
+  color: #f8f9fa;
+}
+
+.navbar-light {
+  background-color: #e3f2fd;
+}
+
+.navbar-dark {
+  background-color: #343a40;
+}
